--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "WCPERestAPI",
-  "version": "2022.3.14",
+  "version": "2022.3.30",
   "description": "WCPE Live Events API endpoints",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate": "apidoc -i ./../WCPE-External-Order-Import -o ."
+    "generate": "apidoc -i ./../WCPE-API-Plugin/classes/cds-am.net/ -o . -c ./../WCPE-API-Plugin/apidoc.json"
   },
   "repository": {
     "type": "git",
@@ -19,12 +19,5 @@
   "homepage": "https://github.com/WesternCPE/rest-api-documentation#readme",
   "dependencies": {
     "apidoc": "^0.50.4"
-  },
-  "apidoc": {
-    "title": "API Documenation",
-    "name": "WesternCPE",
-    "version": "2022.3.14",
-    "description": "WesternCPE Live Events REST API endpoints",
-    "url": "https://dev.westerncpe.com/wp-json/wcpe/v2"
   }
 }
